docs: rewrite README for outside users + add DEV-LOOP, BUILDING-VM, THIRD-PARTY-NOTICES
The README had frozen months ago: it claimed the APK "comes pre-loaded with Cuis
University image" and told people to swap an asset and rebuild to change image,
while all five "Known limitations (v1)" were already fixed. Nothing about the
image chooser, downloads, touch/zoom UI, dev loop or the real prerequisites.

README.md — rewritten around what someone else actually needs:
 - Status with the images actually verified (incl. Cuis master/7.9 renders blank)
 - Requirements: ARM64-only, 64-bit Spur images only, and why
 - Quick start via the startup "Load image" chooser (not a bundled image)
 - "Using it with a finger": the ⊙/☰/⌨ pill, all four right-click methods
   (incl. the undocumented Volume Down), the options dialog, trackpad/precise
   pointer, and how zoom sharpness actually works (whole numbers crisp;
   responsive worlds are sharpest at 1×)
 - Loading images, Save Image, and the bad-image guards
 - Real boot sequence + VM argv (and what -ud is for)
 - Build prerequisites that were missing entirely: JDK 11, the sdkmanager package
   line (NDK 22.0.7026061, CMake 3.22.1, build-tools 30.0.3), Rosetta on Apple
   Silicon; that a fresh clone ships NO image; how release signing works now
 - Honest "Reproducibility caveats" section

New: docs/DEV-LOOP.md (emulator/AVD setup + the scripts + the dev-tests hook),
docs/BUILDING-VM.md (what the binaries are, their real provenance read out of the
binaries, the corrected rebuild procedure, and the gaps that remain),
THIRD-PARTY-NOTICES.md (the ~100 bundled libs and their LGPL implications — the
repo was MIT-only with no notice for redistributed binaries).

CLAUDE.md: audience note pointing at those docs, removed the asset-extraction race
(no longer real), and recorded the audit's still-open items.